<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <TextView
        android:id="@+id/sloganl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/sloganl1"
        android:textColor="@color/black"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/sloganl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sloganl1"
        android:layout_toRightOf="@+id/sloganl1"
        android:text="@string/sloganl2"
        android:textColor="@color/black"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/sloganl3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sloganl2"
        android:layout_toRightOf="@+id/sloganl2"
        android:text="@string/sloganl3"
        android:textColor="@color/black"
        android:textSize="10pt" />

    <ImageView
        android:id="@+id/hoponlogo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/sloganl3"
        android:layout_marginBottom="57dp"
        android:contentDescription="@string/hopon"
        android:src="@drawable/newlogo" />

    <ProgressBar
        android:id="@+id/hopon_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp" />

</RelativeLayout>