<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/balloon_overlay_bg_selector" > 
    <TextView
        android:id="@+id/onetimefblogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dip"
        android:paddingLeft="10dip"
        android:text="One time facebook login to:"
        android:textColor="@color/black"
        android:textSize="20dip" />    
     
        
        <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/onetimefblogin"
        android:layout_centerHorizontal="true"
        android:paddingTop="30dip"
        android:paddingBottom="10dip" >
        <TableRow
            android:layout_gravity="center_horizontal"            
            android:paddingBottom="5dp" >
            <ImageView
                android:paddingRight="10dip"
                android:paddingLeft="50dip"
                android:layout_gravity="right|center_vertical"
                android:src="@drawable/bluelinemarker" />

             <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"            
        android:text="@string/fblogintext2"/>
             
        </TableRow>

        <TableRow android:paddingBottom="5dp" >

             <ImageView
                android:paddingRight="10dip"
                android:paddingLeft="50dip"
                android:layout_gravity="right|center_vertical"
                android:src="@drawable/bluelinemarker" />

             <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"            
        android:text="@string/fblogintext3" />
        </TableRow>

        <TableRow android:paddingBottom="5dip" >

             <ImageView
                android:paddingRight="10dip"
                android:paddingLeft="50dip"
                android:layout_gravity="right|center_vertical"
                android:src="@drawable/bluelinemarker" />

             <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"            
        android:text="@string/fblogintext4" />
        </TableRow>

           </TableLayout>

      

</RelativeLayout>